syntax = "proto3";// 指定使用proto3语法
package Proto;    //导出cs的命名空间

// 定义一个消息，名为TestRequest
message TestRequest { 
  string str = 1; // 查询字符串
  int32 num1 = 2; // 页码
  int32 num2 = 3; // 每页结果数
}
// 定义一个消息，名为TestResponses
message TestResponses {
  string str = 1; // 查询字符串
  int32 num1 = 2; // 页码
  int32 num2 = 3; // 每页结果数
}

//客户端链接成功
message LinkSuccesResponse {
  int64 userId = 1;
}